feat: jira highest vs rest fine tune on rust

--- a/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/high_vs_med_low_github/01_Inference_on_flutter_dataset.ipynb
+++ b/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/high_vs_med_low_github/01_Inference_on_flutter_dataset.ipynb
@@ -10,22 +10,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[codecarbon INFO @ 09:26:44] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 09:26:44] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 09:26:44] Tracking Nvidia GPU via pynvml\n",
-      "[codecarbon INFO @ 09:26:44] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 09:26:44] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon WARNING @ 09:26:47] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
-      "[codecarbon INFO @ 09:26:47] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 09:26:47] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 09:26:47]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
-      "[codecarbon INFO @ 09:26:47]   Python version: 3.11.3\n",
-      "[codecarbon INFO @ 09:26:47]   CodeCarbon version: 2.3.4\n",
-      "[codecarbon INFO @ 09:26:47]   Available RAM : 256.000 GB\n",
-      "[codecarbon INFO @ 09:26:47]   CPU count: 24\n",
-      "[codecarbon INFO @ 09:26:47]   CPU model: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 09:26:47]   GPU count: 1\n",
-      "[codecarbon INFO @ 09:26:47]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
+      "[codecarbon INFO @ 07:57:55] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 07:57:55] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 07:57:55] Tracking Nvidia GPU via pynvml\n",
+      "[codecarbon INFO @ 07:57:55] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 07:57:55] No CPU tracking mode found. Falling back on CPU constant mode.\n",
+      "[codecarbon WARNING @ 07:57:58] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
+      "[codecarbon INFO @ 07:57:58] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 07:57:58] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 07:57:58]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
+      "[codecarbon INFO @ 07:57:58]   Python version: 3.11.3\n",
+      "[codecarbon INFO @ 07:57:58]   CodeCarbon version: 2.3.4\n",
+      "[codecarbon INFO @ 07:57:58]   Available RAM : 256.000 GB\n",
+      "[codecarbon INFO @ 07:57:58]   CPU count: 24\n",
+      "[codecarbon INFO @ 07:57:58]   CPU model: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 07:57:58]   GPU count: 1\n",
+      "[codecarbon INFO @ 07:57:58]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
      ]
     }
    ],
@@ -711,7 +711,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 149/149 [00:24<00:00,  6.07it/s]\n"
+      "100%|██████████| 149/149 [00:50<00:00,  2.95it/s]\n"
      ]
     },
     {
@@ -725,7 +725,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 149/149 [00:24<00:00,  6.08it/s]\n"
+      "100%|██████████| 149/149 [00:50<00:00,  2.93it/s]\n"
      ]
     },
     {
@@ -739,7 +739,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 149/149 [00:24<00:00,  6.06it/s]\n"
+      "100%|██████████| 149/149 [00:51<00:00,  2.91it/s]\n"
      ]
     }
    ],
@@ -1494,6 +1494,28 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "c052c9b2-7127-423f-806e-70d35ba1651d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthew's Correlation Coefficient: 0.34729647940204156\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "\n",
+    "# Calculate the Matthew's Correlation Coefficient\n",
+    "mcc = matthews_corrcoef(test_df[\"label\"].values, test_df[\"pred\"].values)\n",
+    "print(\"Matthew's Correlation Coefficient:\", mcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "61a155c0-14f8-4918-8b58-8ebc91c06d5f",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "92aef238-1ef9-4fbf-9ea1-000be88fdd3d",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1742,7 @@
        "[2370 rows x 9 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,17 +1753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "9df7325a-84f4-4cee-a124-69df51476feb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0002486219603578432"
+       "0.0004339737982065293"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
