--- a/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/high_vs_med_low_github/01_Inference_on_mypy_dataset.ipynb
+++ b/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/high_vs_med_low_github/01_Inference_on_mypy_dataset.ipynb
@@ -10,22 +10,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[codecarbon INFO @ 09:30:10] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 09:30:10] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 09:30:10] Tracking Nvidia GPU via pynvml\n",
-      "[codecarbon INFO @ 09:30:10] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 09:30:10] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon WARNING @ 09:30:13] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
-      "[codecarbon INFO @ 09:30:13] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 09:30:13] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 09:30:13]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
-      "[codecarbon INFO @ 09:30:13]   Python version: 3.11.3\n",
-      "[codecarbon INFO @ 09:30:13]   CodeCarbon version: 2.3.4\n",
-      "[codecarbon INFO @ 09:30:13]   Available RAM : 256.000 GB\n",
-      "[codecarbon INFO @ 09:30:13]   CPU count: 24\n",
-      "[codecarbon INFO @ 09:30:13]   CPU model: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 09:30:13]   GPU count: 1\n",
-      "[codecarbon INFO @ 09:30:13]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
+      "[codecarbon INFO @ 08:01:29] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 08:01:29] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 08:01:29] Tracking Nvidia GPU via pynvml\n",
+      "[codecarbon INFO @ 08:01:29] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 08:01:29] No CPU tracking mode found. Falling back on CPU constant mode.\n",
+      "[codecarbon WARNING @ 08:01:32] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
+      "[codecarbon INFO @ 08:01:32] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:01:32] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 08:01:32]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
+      "[codecarbon INFO @ 08:01:32]   Python version: 3.11.3\n",
+      "[codecarbon INFO @ 08:01:32]   CodeCarbon version: 2.3.4\n",
+      "[codecarbon INFO @ 08:01:32]   Available RAM : 256.000 GB\n",
+      "[codecarbon INFO @ 08:01:32]   CPU count: 24\n",
+      "[codecarbon INFO @ 08:01:32]   CPU model: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:01:32]   GPU count: 1\n",
+      "[codecarbon INFO @ 08:01:32]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
      ]
     }
    ],
@@ -711,7 +711,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 46/46 [00:07<00:00,  6.13it/s]\n"
+      "100%|██████████| 46/46 [00:15<00:00,  2.95it/s]\n"
      ]
     },
     {
@@ -725,7 +725,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 46/46 [00:07<00:00,  6.27it/s]\n"
+      "100%|██████████| 46/46 [00:15<00:00,  3.00it/s]\n"
      ]
     },
     {
@@ -739,7 +739,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 46/46 [00:07<00:00,  6.26it/s]\n"
+      "100%|██████████| 46/46 [00:15<00:00,  3.02it/s]\n"
      ]
     }
    ],
@@ -1494,6 +1494,28 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "7b3b8b27-0351-4c22-afac-c2a9a9be95c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthew's Correlation Coefficient: 0.222181081386505\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "\n",
+    "# Calculate the Matthew's Correlation Coefficient\n",
+    "mcc = matthews_corrcoef(test_df[\"label\"].values, test_df[\"pred\"].values)\n",
+    "print(\"Matthew's Correlation Coefficient:\", mcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "61a155c0-14f8-4918-8b58-8ebc91c06d5f",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "92aef238-1ef9-4fbf-9ea1-000be88fdd3d",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1742,7 @@
        "[734 rows x 9 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,17 +1753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "9df7325a-84f4-4cee-a124-69df51476feb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.910668604721755e-05"
+       "0.00016445406588109116"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
