--- a/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/highest_vs_rest_jira/01_Inference_on_Jira_dataset.ipynb
+++ b/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/highest_vs_rest_jira/01_Inference_on_Jira_dataset.ipynb
@@ -10,22 +10,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[codecarbon INFO @ 08:12:11] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 08:12:11] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 08:12:11] Tracking Nvidia GPU via pynvml\n",
-      "[codecarbon INFO @ 08:12:11] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 08:12:11] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon WARNING @ 08:12:14] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
-      "[codecarbon INFO @ 08:12:14] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 08:12:14] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 08:12:14]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
-      "[codecarbon INFO @ 08:12:14]   Python version: 3.11.3\n",
-      "[codecarbon INFO @ 08:12:14]   CodeCarbon version: 2.3.4\n",
-      "[codecarbon INFO @ 08:12:14]   Available RAM : 256.000 GB\n",
-      "[codecarbon INFO @ 08:12:14]   CPU count: 24\n",
-      "[codecarbon INFO @ 08:12:14]   CPU model: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 08:12:14]   GPU count: 1\n",
-      "[codecarbon INFO @ 08:12:14]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
+      "[codecarbon INFO @ 08:03:55] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 08:03:55] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 08:03:55] Tracking Nvidia GPU via pynvml\n",
+      "[codecarbon INFO @ 08:03:55] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 08:03:55] No CPU tracking mode found. Falling back on CPU constant mode.\n",
+      "[codecarbon WARNING @ 08:03:58] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
+      "[codecarbon INFO @ 08:03:58] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:03:58] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 08:03:58]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
+      "[codecarbon INFO @ 08:03:58]   Python version: 3.11.3\n",
+      "[codecarbon INFO @ 08:03:58]   CodeCarbon version: 2.3.4\n",
+      "[codecarbon INFO @ 08:03:58]   Available RAM : 256.000 GB\n",
+      "[codecarbon INFO @ 08:03:58]   CPU count: 24\n",
+      "[codecarbon INFO @ 08:03:58]   CPU model: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:03:58]   GPU count: 1\n",
+      "[codecarbon INFO @ 08:03:58]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
      ]
     }
    ],
@@ -711,7 +711,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 584/584 [01:18<00:00,  7.46it/s]\n"
+      "100%|██████████| 584/584 [06:16<00:00,  1.55it/s]\n"
      ]
     },
     {
@@ -725,7 +725,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 584/584 [01:18<00:00,  7.42it/s]\n"
+      "100%|██████████| 584/584 [03:34<00:00,  2.73it/s]\n"
      ]
     },
     {
@@ -739,7 +739,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 584/584 [01:18<00:00,  7.40it/s]\n"
+      "100%|██████████| 584/584 [03:00<00:00,  3.23it/s]\n"
      ]
     }
    ],
@@ -1494,6 +1494,28 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "99eac65c-6be2-40a6-8153-0cf9476d9112",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthew's Correlation Coefficient: 0.18765508853657825\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "\n",
+    "# Calculate the Matthew's Correlation Coefficient\n",
+    "mcc = matthews_corrcoef(test_df[\"label\"].values, test_df[\"pred\"].values)\n",
+    "print(\"Matthew's Correlation Coefficient:\", mcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "61a155c0-14f8-4918-8b58-8ebc91c06d5f",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "92aef238-1ef9-4fbf-9ea1-000be88fdd3d",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1742,7 @@
        "[9332 rows x 9 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,17 +1753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "9df7325a-84f4-4cee-a124-69df51476feb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0007260355822896114"
+       "0.0019548013295271403"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
