--- a/priority_model_deberta/jira_models/highest_high_vs_rest/01_inference_on__.ipynb
+++ b/priority_model_deberta/jira_models/highest_high_vs_rest/01_inference_on__.ipynb
@@ -19,22 +19,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[codecarbon INFO @ 07:39:51] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 07:39:51] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 07:39:51] Tracking Nvidia GPU via pynvml\n",
-      "[codecarbon INFO @ 07:39:51] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 07:39:51] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon WARNING @ 07:39:54] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
-      "[codecarbon INFO @ 07:39:54] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 07:39:54] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 07:39:54]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
-      "[codecarbon INFO @ 07:39:54]   Python version: 3.11.3\n",
-      "[codecarbon INFO @ 07:39:54]   CodeCarbon version: 2.3.4\n",
-      "[codecarbon INFO @ 07:39:54]   Available RAM : 256.000 GB\n",
-      "[codecarbon INFO @ 07:39:54]   CPU count: 24\n",
-      "[codecarbon INFO @ 07:39:54]   CPU model: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 07:39:54]   GPU count: 1\n",
-      "[codecarbon INFO @ 07:39:54]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
+      "[codecarbon INFO @ 08:49:37] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 08:49:37] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 08:49:37] Tracking Nvidia GPU via pynvml\n",
+      "[codecarbon INFO @ 08:49:37] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 08:49:37] No CPU tracking mode found. Falling back on CPU constant mode.\n",
+      "[codecarbon WARNING @ 08:49:40] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
+      "[codecarbon INFO @ 08:49:40] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:49:40] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 08:49:40]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
+      "[codecarbon INFO @ 08:49:40]   Python version: 3.11.3\n",
+      "[codecarbon INFO @ 08:49:40]   CodeCarbon version: 2.3.4\n",
+      "[codecarbon INFO @ 08:49:40]   Available RAM : 256.000 GB\n",
+      "[codecarbon INFO @ 08:49:40]   CPU count: 24\n",
+      "[codecarbon INFO @ 08:49:40]   CPU model: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:49:40]   GPU count: 1\n",
+      "[codecarbon INFO @ 08:49:40]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
      ]
     }
    ],
@@ -1632,7 +1632,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2565/2565 [05:30<00:00,  7.75it/s]\n"
+      "100%|██████████| 2565/2565 [21:07<00:00,  2.02it/s]\n"
      ]
     },
     {
@@ -1646,7 +1646,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2565/2565 [05:31<00:00,  7.74it/s]\n"
+      "100%|██████████| 2565/2565 [21:05<00:00,  2.03it/s]\n"
      ]
     },
     {
@@ -1660,7 +1660,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2565/2565 [09:53<00:00,  4.32it/s]\n"
+      "100%|██████████| 2565/2565 [21:06<00:00,  2.02it/s]\n"
      ]
     }
    ],
@@ -2415,16 +2415,38 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "77878c71-10a7-465f-ac1d-b519328b1023",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthew's Correlation Coefficient: 0.4056294506727936\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "\n",
+    "# Calculate the Matthew's Correlation Coefficient\n",
+    "mcc = matthews_corrcoef(test_df[\"label\"].values, test_df[\"pred\"].values)\n",
+    "print(\"Matthew's Correlation Coefficient:\", mcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "2f2df1a2-253f-4e67-9bad-a799f788b426",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0034748542690062768"
+       "0.009364433450212177"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
