--- a/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/highest_vs_rest_jira/01_Inference_on_Qt_dataset.ipynb
+++ b/priority_model_deberta/github_models/high_vs_med_low/hp_vs_low_med_top50repos/02_inference/highest_vs_rest_jira/01_Inference_on_Qt_dataset.ipynb
@@ -10,22 +10,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[codecarbon INFO @ 07:29:23] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 07:29:23] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 07:29:23] Tracking Nvidia GPU via pynvml\n",
-      "[codecarbon INFO @ 07:29:23] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 07:29:23] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon WARNING @ 07:29:26] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
-      "[codecarbon INFO @ 07:29:26] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 07:29:26] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 07:29:26]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
-      "[codecarbon INFO @ 07:29:26]   Python version: 3.11.3\n",
-      "[codecarbon INFO @ 07:29:26]   CodeCarbon version: 2.3.4\n",
-      "[codecarbon INFO @ 07:29:26]   Available RAM : 256.000 GB\n",
-      "[codecarbon INFO @ 07:29:26]   CPU count: 24\n",
-      "[codecarbon INFO @ 07:29:26]   CPU model: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 07:29:26]   GPU count: 1\n",
-      "[codecarbon INFO @ 07:29:26]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
+      "[codecarbon INFO @ 08:03:50] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 08:03:50] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 08:03:50] Tracking Nvidia GPU via pynvml\n",
+      "[codecarbon INFO @ 08:03:50] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 08:03:50] No CPU tracking mode found. Falling back on CPU constant mode.\n",
+      "[codecarbon WARNING @ 08:03:52] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
+      "[codecarbon INFO @ 08:03:52] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:03:52] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 08:03:52]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
+      "[codecarbon INFO @ 08:03:52]   Python version: 3.11.3\n",
+      "[codecarbon INFO @ 08:03:52]   CodeCarbon version: 2.3.4\n",
+      "[codecarbon INFO @ 08:03:52]   Available RAM : 256.000 GB\n",
+      "[codecarbon INFO @ 08:03:52]   CPU count: 24\n",
+      "[codecarbon INFO @ 08:03:52]   CPU model: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:03:52]   GPU count: 1\n",
+      "[codecarbon INFO @ 08:03:52]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
      ]
     }
    ],
@@ -710,7 +710,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 243/243 [00:38<00:00,  6.31it/s]\n"
+      "100%|██████████| 243/243 [02:54<00:00,  1.39it/s]\n"
      ]
     },
     {
@@ -724,7 +724,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 243/243 [00:37<00:00,  6.41it/s]\n"
+      "100%|██████████| 243/243 [02:29<00:00,  1.62it/s]\n"
      ]
     },
     {
@@ -738,7 +738,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 243/243 [00:37<00:00,  6.40it/s]\n"
+      "100%|██████████| 243/243 [02:09<00:00,  1.88it/s]\n"
      ]
     }
    ],
@@ -1493,6 +1493,28 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "7cb62976-d23a-4f07-a4c0-d6ebf1daebb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthew's Correlation Coefficient: 0.41807936923940325\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "\n",
+    "# Calculate the Matthew's Correlation Coefficient\n",
+    "mcc = matthews_corrcoef(test_df[\"label\"].values, test_df[\"pred\"].values)\n",
+    "print(\"Matthew's Correlation Coefficient:\", mcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "61a155c0-14f8-4918-8b58-8ebc91c06d5f",
    "metadata": {},
    "outputs": [],
@@ -1502,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "92aef238-1ef9-4fbf-9ea1-000be88fdd3d",
    "metadata": {},
    "outputs": [
@@ -1719,7 +1741,7 @@
        "[3882 rows x 9 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,17 +1752,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "9df7325a-84f4-4cee-a124-69df51476feb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0003711641521508553"
+       "0.0012083908839712614"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
