--- a/priority_model_deberta/jira_models/highest_high_vs_low_lowest/01_training/02_inference.ipynb
+++ b/priority_model_deberta/jira_models/highest_high_vs_low_lowest/01_training/02_inference.ipynb
@@ -37,29 +37,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[codecarbon INFO @ 18:12:01] [setup] RAM Tracking...\n",
-      "[codecarbon INFO @ 18:12:01] [setup] GPU Tracking...\n",
-      "[codecarbon INFO @ 18:12:01] Tracking Nvidia GPU via pynvml\n",
-      "[codecarbon INFO @ 18:12:01] [setup] CPU Tracking...\n",
-      "[codecarbon WARNING @ 18:12:01] No CPU tracking mode found. Falling back on CPU constant mode.\n",
-      "[codecarbon WARNING @ 18:12:04] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
-      "[codecarbon INFO @ 18:12:04] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 18:12:04] >>> Tracker's metadata:\n",
-      "[codecarbon INFO @ 18:12:04]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
-      "[codecarbon INFO @ 18:12:04]   Python version: 3.11.3\n",
-      "[codecarbon INFO @ 18:12:04]   CodeCarbon version: 2.3.4\n",
-      "[codecarbon INFO @ 18:12:04]   Available RAM : 256.000 GB\n",
-      "[codecarbon INFO @ 18:12:04]   CPU count: 24\n",
-      "[codecarbon INFO @ 18:12:04]   CPU model: AMD EPYC 7642 48-Core Processor\n",
-      "[codecarbon INFO @ 18:12:04]   GPU count: 1\n",
-      "[codecarbon INFO @ 18:12:04]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[codecarbon INFO @ 07:52:18] [setup] CPU Tracking...\n"
+      "[codecarbon INFO @ 08:49:29] [setup] RAM Tracking...\n",
+      "[codecarbon INFO @ 08:49:29] [setup] GPU Tracking...\n",
+      "[codecarbon INFO @ 08:49:29] Tracking Nvidia GPU via pynvml\n",
+      "[codecarbon INFO @ 08:49:29] [setup] CPU Tracking...\n",
+      "[codecarbon WARNING @ 08:49:29] No CPU tracking mode found. Falling back on CPU constant mode.\n",
+      "[codecarbon WARNING @ 08:49:32] We saw that you have a AMD EPYC 7642 48-Core Processor but we don't know it. Please contact us.\n",
+      "[codecarbon INFO @ 08:49:32] CPU Model on constant consumption mode: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:49:32] >>> Tracker's metadata:\n",
+      "[codecarbon INFO @ 08:49:32]   Platform system: Linux-5.14.0-362.8.1.el9_3.x86_64-x86_64-with-glibc2.34\n",
+      "[codecarbon INFO @ 08:49:32]   Python version: 3.11.3\n",
+      "[codecarbon INFO @ 08:49:32]   CodeCarbon version: 2.3.4\n",
+      "[codecarbon INFO @ 08:49:32]   Available RAM : 256.000 GB\n",
+      "[codecarbon INFO @ 08:49:32]   CPU count: 24\n",
+      "[codecarbon INFO @ 08:49:32]   CPU model: AMD EPYC 7642 48-Core Processor\n",
+      "[codecarbon INFO @ 08:49:32]   GPU count: 1\n",
+      "[codecarbon INFO @ 08:49:32]   GPU model: 1 x NVIDIA A100-PCIE-40GB\n"
      ]
     },
     {
@@ -508,9 +501,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "highest_high_vs_low_lowest_balanced_jira.csv  high_vs_rest\n",
-      "highest_vs_lowest_balanced_jira.csv\t      jira_clean_with_all_cols.csv\n",
-      "high_highest_vs_rest\n"
+      "highest_high_vs_low_lowest_balanced_jira.csv\thigh_highest_vs_rest\n",
+      "highest_vs_lowest_balanced_jira.csv\t\thigh_vs_rest\n",
+      "highest_vs_rest_min_len_25th_balanced_jira.csv\tjira_clean_with_all_cols.csv\n"
      ]
     }
    ],
@@ -2138,7 +2131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4097/4097 [08:18<00:00,  8.21it/s]\n"
+      "100%|██████████| 4097/4097 [33:43<00:00,  2.02it/s]\n"
      ]
     },
     {
@@ -2152,7 +2145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4097/4097 [08:19<00:00,  8.20it/s]\n"
+      "100%|██████████| 4097/4097 [32:08<00:00,  2.12it/s]\n"
      ]
     },
     {
@@ -2166,7 +2159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4097/4097 [08:19<00:00,  8.20it/s]\n"
+      "100%|██████████| 4097/4097 [20:22<00:00,  3.35it/s]\n"
      ]
     }
    ],
@@ -3074,6 +3067,28 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "c4a76205-aadd-4f14-9345-1d6b1629acc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matthew's Correlation Coefficient: 0.5401964051038926\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import matthews_corrcoef\n",
+    "\n",
+    "# Calculate the Matthew's Correlation Coefficient\n",
+    "mcc = matthews_corrcoef(test_df[\"label\"].values, test_df[\"pred\"].values)\n",
+    "print(\"Matthew's Correlation Coefficient:\", mcc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "2f2df1a2-253f-4e67-9bad-a799f788b426",
    "metadata": {
     "papermill": {
@@ -3089,10 +3104,10 @@
     {
      "data": {
       "text/plain": [
-       "0.00446345672995974"
+       "0.01259443851914332"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
