--- a/jira/dataset_creation/Jira_dataset/04_merge_priority_dataset.ipynb
+++ b/jira/dataset_creation/Jira_dataset/04_merge_priority_dataset.ipynb
@@ -3727,7 +3727,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3741,9 +3741,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
